--- a/index.htm
+++ b/index.htm
@@ -2,32 +2,94 @@
 <html>
 <head>
     <title>Web Tech Exam - Q1.htm</title>
+    <style type="text/css">
+        body {
+            margin-top: 0px;
+            margin-bottom: 0px;
+            margin-right: 0px;
+            margin-left: 0px;
+        }
+        ul {
+            list-style-type: square;
+        }
+        ol {
+            list-style-type: upper-roman;
+        }
+        li:first-child {
+            color: red;
+        }
+        a:hover {
+            background-color: yellow;
+            text-decoration: none;
+        }
+        .header {
+            background-color: lightgray;
+            height: 100px;
+        }
+        .header img {
+          float: right;
+          display:inline-block;
+          vertical-align: middle;
+          height: 80px;
+          margin-right: 200px;
+        }
+
+        .header h1 {
+          margin-left: 200px;
+          display: inline-block;
+          vertical-align: middle;
+        }
+        #ack {
+            margin-top: 0;
+            font-style: italic;
+            font-size: 12px;
+            color: navy;
+            margin-left: 200px;
+            background-color: white;
+        }
+        #gmap {
+            display: inline;
+            float: right;
+        }
+        .lg {
+            background-color: lightgreen;
+            padding-left: 50px;
+            margin-right: 70%;
+        }
+        .red {
+            color: red;
+        }
+        .content {
+            margin-left: 220px;
+            margin-right: 220px;
+        }
+    </style>
 </head>
 <body>
-
+    <div class="header">
+    <img src="logo.png" />
     <h1>Babson College</h1>
-
-
-    <p> <!-- This is the first paragraph -->
+    </div>
+    <p id="ack"> <!-- This is the first paragraph -->
         Acknowledgement: This website is for exam in the Web Technologies Course, Fall 2018. The material
         contained here is from https://en.wikipedia.org/wiki/Babson_College. Good luck!
     </p>
-    <div>
+    <div class="content">
 
 
-        <h3>About Babson</h3>
+        <h3 id="about" class="lg">About Babson</h3>
         <p><!-- This is the second paragraph -->
-            Babson College is a private business school in Wellesley, Massachusetts,
+            <span class="red">Babson</span> College is a private business school in Wellesley, Massachusetts,
             established in 1919. Its central focus is on entrepreneurship education, and it is often ranked the most
             prestigious entrepreneurship college in the United States.
         </p>
         <p> <!-- This is the third paragraph -->
-            It was founded by Roger W. Babson as an all-male business institute. Now co-ed, Babson College offers
+            It was founded by Roger W. Babson as an all-male business institute. Now co-ed, <span class="red">Babson</span> College offers
             bachelor's degrees in business administration and undergraduate students have the opportunity to declare
             concentrations in more than twenty seven areas of study. Through Babson's F. W. Olin Graduate School of
             Business, the college also offers master's degrees in business administration, finance, accounting,
             entrepreneurial leadership and management. Often referred to as the "Entrepreneur's College", Babson is
-            renowned for immersing its students in the entrepreneurial lifestyle and culture. Babson is also notable for
+            renowned for immersing its students in the entrepreneurial lifestyle and culture. <span class="red">Babson</span> is also notable for
             its Foundations of Management and Entrepreneurship course, in which every enrolled first-year student
             starts, runs and dissolves a company. Babson currently offers undergraduates
             nearly sixty
@@ -37,37 +99,43 @@
             considered very selective and currently has an undergraduate acceptance rate of 24%.
         </p>
         <p><!-- This is the fourth paragraph -->
-            Babson College has consistently appeared on the U.S. News & World Report rankings as the number one college
+            Babson College has consistently appeared on the <a href="https://www.usnews.com/best-graduate-schools/top-business-schools/entrepreneurship-
+rankings">U.S. News & World Report</a> rankings as the number one college
             in entrepreneurship education for nearly three decades. In 2014, CNN's Money Magazine named Babson the
             number one college in the country for value and in 2015 the magazine ranked it second. The Economist ranked
             Babson second on its 2015 list of best colleges and universities in outperforming earnings expectations.
             Babson's MBA program has also been ranked number one in entrepreneurship for over twenty years by U.S. News
             & World Report.
         </p>
-
-        <h3>Basic Information</h3>
-        <p>
+        <iframe width="300" height="200" id="gmap" src="https://maps.google.com/maps?q=Babson%20college&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <h3 class="lg">Basic Information</h3>
+        <ul>
+            <li>
             Former names: Babson Institute (1919–1969)
-
+            </li>
+            <li>
             Type: Private
-
+            </li>
+            <li>
             Established: September 3, 1919
-
+            </li>
+            <li>
             Location: Wellesley, Massachusetts, United States
+            </li>
+            <li>Website: <a href="http://www.babson.edu/Pages/default.aspx">www.babson.edu</a></li>
+        </ul>
 
-            Website: www.babson.edu
-        </p>
 
+        <h3 class="lg">Class of 2019 statistics</h3>
+        <ol>
+            <li>Class size: 528</li>
+            <li>Percentage of women: 54</li>
+            <li>Percentage of multicultural students: 30</li>
+            <li>Percentage of international students: 25</li>
+            <li>Number of countries represented: 51</li>
 
-        <h3>Class of 2019 statistics</h3>
-        <p>
-            Class size: 528
-            Percentage of women: 54
-            Percentage of multicultural students: 30
-            Percentage of international students: 25
-            Number of countries represented: 51
-
-        </p>
+        </ol>
+        <p><a href="#about">Top of Page</a></p>
     </div>
 
 </body>
